# GeoViewShared

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
geoview_common/: __init__.py  ctk_theme_geoview.json  file_validator.py
geoview_common/ctk_widgets/: __init__.py  activity_log.py  base_app.py  chart_frame.py  data_table.py  kpi_card.py  pipeline_tracker.py  score_gauge.py  styled_widgets.py
geoview_common/geo/: __init__.py  crs.py
geoview_common/project_context/: __init__.py  integration.py  models.py  signals.py  store.py
geoview_common/qc/: __init__.py
geoview_common/reporting/: __init__.py  design_system.py  excel_writer.py
geoview_common/segy/: __init__.py  reader.py
geoview_common/styles/: __init__.py  colors.py  fonts.py  themes.py
geoview_common/tests/: test_file_validator.py
geoview_cpt/: __init__.py
geoview_cpt/ags_convert/: __init__.py  cli.py  defaults_config.py  jako_audit.py  wrapper.py  writer.py
geoview_cpt/charts/: __init__.py  _helpers.py  borehole_log_kr.py  cpet_it_compat.py  dr_profile.py  ic_profile.py  log_plot.py  sbt_chart.py  su_profile.py
geoview_gi/: __init__.py  classification.py  in_situ.py  minimal_model.py  physical_logging.py
geoview_pyside6/: __init__.py  _build_hooks.py  _screenshot.py  app_base.py  branding.py  busy.py  chart_style.py  constants.py  effects.py  help.py  i18n.py  logging.py  observability.py  perf_hook.py  runtime.py  sounds.py  splash.py  surface_roles.py  theme_aware.py  utils.py  workers.py
tests/: test_palette_equivalence.py  test_qt_plugin_path.py
(+283 files in other folders)
