[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geoview-common"
version = "1.0.0"
description = "Shared utilities for GeoView software portfolio"
authors = [{name = "Junhyub Kim"}]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
gui = ["customtkinter>=5.2", "matplotlib>=3.7"]
segy = ["segyio>=1.9"]
docs = ["python-docx>=1.0", "python-pptx>=0.6.21"]
geo = ["pyproj>=3.6"]
all = ["geoview-common[gui,segy,docs,geo]"]

[tool.setuptools.packages.find]
include = ["geoview_common*"]
